--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "typescript": "^5.6.3",
     "vite": "^5.4.11"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "caniuse-lite": "^1.0.30001712",
+    "posthog-js": "^1.203.3"
+  }
 }
