--- a/package.json
+++ b/package.json
@@ -12,30 +12,29 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.3.1",
-    "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.8.0",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "@types/eslint": "8.56.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.46.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.8",
-    "svelte": "^5.1.15",
-    "svelte-check": "^3.8.6",
-    "tailwindcss": "^3.4.14",
+    "@sveltejs/adapter-auto": "^6.0.0",
+    "@sveltejs/adapter-static": "^3.0.8",
+    "@sveltejs/kit": "^2.20.5",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@types/eslint": "9.6.1",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-svelte": "^3.5.1",
+    "prettier": "^3.5.3",
+    "prettier-plugin-svelte": "^3.3.3",
+    "svelte": "^5.26.2",
+    "svelte-check": "^4.1.6",
+    "tailwindcss": "^4.1.3",
     "tslib": "^2.8.1",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.11"
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6"
   },
   "type": "module",
   "dependencies": {
-    "caniuse-lite": "^1.0.30001712",
-    "posthog-js": "^1.203.3"
+    "@tailwindcss/vite": "^4.1.3",
+    "caniuse-lite": "^1.0.30001713",
+    "posthog-js": "^1.235.6"
   }
 }
